feat: added crud for curriculum
