# app/requestmodels/base.go
@@ -11,6 +11,11 @@ type RefVersioned struct {
 	Version uint `json:"version"`
 }
 
+type RefTimed struct {
+	ID            uint   `json:"id"`
+	StartValidity string `json:"startvalidity"`
+}
+
 type RefSelectedCourse struct {
 	UserID         uint      `gorm:"primarykey" json:"userId"`
 	CourseID       uint      `gorm:"primarykey" json:"courseId"`
